--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
   "license": "MIT",
   "type": "library",
   "require": {
-    "php": ">=5.5",
-    "dez-php/dez-di": ">=1.0"
+    "php": ">=5.5"
   },
   "autoload": {
     "psr-4": {
