--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "type": "library",
   "require": {
-    "php": ">=5.5"
+    "php": ">=5.5",
+    "dez-php/dez-di": ">=1.0"
   },
   "autoload": {
     "psr-4": {
