--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "type": "library",
   "require": {
     "php": ">=5.5",
-    "dez-php/dez-di": ">=1.0"
+    "dez-php/dez-di": "~1.0",
+    "dez-php/dez-url": "~1.0"
   },
   "autoload": {
     "psr-4": {
